mobile version cards alignment fix

--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -18,13 +18,15 @@
   }
 
   .cards {
+    width: 23rem;
+    margin: 0 auto;
     .card {
       position: relative;
       height: 15em;
       max-width: 325px;
       background: white;
       padding: 2rem;
-      margin: 0 auto 2rem auto;
+      margin-bottom: 2rem;
       border-top: 4px solid;
       border-radius: 0.5rem;
       box-shadow: 0 14px 28px -25px rgba(0, 0, 0, 0.25),
